[package]
name = "nl"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_nl"
path = "nl.rs"

[dependencies]
getopts = "0.2.18"
libc = "0.2.47"
aho-corasick = "0.6.9"
memchr = "2.1.2"
regex = "1.1.0"
regex-syntax = "0.6.4"
uucore = { path="../uucore" }

[[bin]]
name = "nl"
path = "../../uumain.rs"
