[package]
name = "touch"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_touch"
path = "touch.rs"

[dependencies]
filetime = "0.2.4"
getopts = "0.2.18"
time = "0.1.42"

[dependencies.uucore]
path = "../uucore"
features = ["libc"]

[[bin]]
name = "touch"
path = "../../uumain.rs"
