[package]
name = "uucore"
version = "0.0.1"
authors = []

[dependencies]
getopts = "0.2.18"
failure = { version = "0.1.5", optional = true }
failure_derive = { version = "0.1.5", optional = true }
time = { version = "0.1.42", optional = true }
data-encoding = { version = "2.1.2", optional = true }
libc = { version = "0.2.47", optional = true }

[target.'cfg(target_os = "redox")'.dependencies]
termion = "1.5.1"

[features]
fs = ["libc"]
utf8 = []
encoding = ["data-encoding", "failure", "failure_derive"]
parse_time = []
mode = ["libc"]
utmpx = ["time", "libc"]
process = ["libc"]
signals = []
entries = ["libc"]
wide = []
default = []

[lib]
path = "lib.rs"
name = "uucore"
